# tasks

./: .gitignore  CLAUDE.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: check.yml  desktop-native-release.yml  desktop-native.yml
app/src/main/java/com/todoroo/astrid/service/: TaskDeleter.kt
data/: build.gradle.kts
data/src/commonMain/kotlin/org/tasks/data/dao/: DeletionDao.kt
desktop/: build.gradle.kts
desktop-native/: BUILD.md  Cargo.toml  DECISIONS.md  PLAN_UPDATES.md  README.md
desktop-native/crates/tasks-core/: Cargo.toml  build.rs
desktop-native/crates/tasks-core/src/: datetime.rs  error.rs  import.rs  lib.rs  recurrence.rs  write.rs
desktop-native/crates/tasks-core/src/db/: mod.rs
desktop-native/crates/tasks-core/src/models/: alarm.rs  caldav.rs  filter.rs  mod.rs  place.rs  tag.rs  task.rs
desktop-native/crates/tasks-core/src/query/: filter.rs  mod.rs  non_recursive.rs  permasql.rs  preferences.rs  recursive.rs  sort.rs
desktop-native/crates/tasks-core/src/watch/: mod.rs
desktop-native/crates/tasks-core/tests/: create_db.rs  db_smoke.rs  entities_smoke.rs  fixture_queries.rs  import_json.rs  non_recursive_query.rs  recursive_query.rs  schema_guard.rs  write.rs
desktop-native/crates/tasks-core/tests/fixtures/: README.md
desktop-native/crates/tasks-sync/: Cargo.toml
desktop-native/crates/tasks-sync/src/: convert.rs  engine.rs  ical.rs  lib.rs  loopback.rs  oauth.rs  provider.rs  token_store.rs
desktop-native/crates/tasks-sync/src/providers/: caldav.rs  caldav_xml.rs  etesync.rs  google.rs  google_json.rs  http_util.rs  microsoft.rs  microsoft_json.rs  mod.rs
desktop-native/crates/tasks-ui/: Cargo.toml  build.rs
desktop-native/crates/tasks-ui/cxx/: task_list_model_base.h
desktop-native/crates/tasks-ui/qml/: AccountsPane.qml  CompactComboBox.qml  CompactMenuItem.qml  CompactTextField.qml  DatePickerButton.qml  ListSettingsPane.qml  Main.qml  PreferencesDialog.qml  PriorityDot.qml  SettingsWindow.qml  SidebarPane.qml  TaskDetailPane.qml  TaskEditDialog.qml  TaskListPane.qml
desktop-native/crates/tasks-ui/src/: bridge.rs  main.rs  win_dark_titlebar.rs
desktop-native/docker/: Dockerfile.dev  setup-ubuntu-24.04.sh
desktop/src/main/kotlin/org/tasks/desktop/: DesktopApplication.kt  Main.kt
desktop/src/main/kotlin/org/tasks/desktop/auth/: DesktopOAuthHandler.kt  OAuthCallbackServer.kt
desktop/src/main/kotlin/org/tasks/desktop/di/: DesktopContainer.kt
desktop/src/main/kotlin/org/tasks/desktop/navigation/: Navigator.kt  Screen.kt
desktop/src/main/kotlin/org/tasks/desktop/notifications/: ReminderScheduler.kt  SystemTrayManager.kt
desktop/src/main/kotlin/org/tasks/desktop/platform/: DesktopPaths.kt  FileDialogs.kt  ThemeManager.kt  WindowStateManager.kt
desktop/src/main/kotlin/org/tasks/desktop/screens/: AccountEditScreen.kt  AccountSetupScreen.kt  FilterCreateScreen.kt  FilterEditScreen.kt  FilterEditorScreen.kt  ListEditScreen.kt  MainScreen.kt  PlaceEditScreen.kt  SettingsScreen.kt  SidebarPane.kt  TagEditScreen.kt  TaskEditPane.kt  TaskListPane.kt
desktop/src/main/kotlin/org/tasks/desktop/sync/: DesktopCaldavClient.kt  DesktopCaldavSynchronizer.kt  DesktopEtebaseClient.kt  DesktopEtebaseLocalCache.kt  DesktopEtesyncSynchronizer.kt  DesktopGoogleTasksInvoker.kt  DesktopGoogleTasksOAuth.kt  DesktopGoogleTasksSynchronizer.kt  DesktopSyncManager.kt  DesktopVtodoConverter.kt
gradle/: libs.versions.toml
kmp/: build.gradle.kts
kmp/src/commonMain/kotlin/org/tasks/compose/drawer/: TaskListDrawer.kt
