[workspace]
resolver = "2"
members = [
    "crates/tasks-core",
    "crates/tasks-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.79"
license = "GPL-3.0-or-later"
repository = "https://github.com/tasks/tasks"

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
notify = "6"
notify-debouncer-full = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
