[package]
name = "tasks-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Read-only core for the Tasks.org native desktop client: models, SQLite access, query builders, filesystem watching."
build = "build.rs"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
# JSON backup import — reads `TasksJsonExporter.kt`'s output and
# materialises it into the desktop's managed SQLite.
serde_json = "1"
thiserror = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
tracing = { workspace = true }
# Used to compute the default per-OS data directory
# (~/.local/share/tasks-desktop/ on Linux,
#  ~/Library/Application Support/tasks-desktop/ on macOS,
#  %APPDATA%\tasks-desktop\ on Windows).
dirs = "5"
# New-task creation + any path that mints CalDAV UIDs locally needs
# stable UUID v4 generation. Matches the shape Android's Task.remoteId
# / caldav_tasks.cd_remote_id carry.
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
# Used by build.rs to parse data/schemas/.../<v>.json and emit the
# CREATE TABLE / INDEX statements we bake into the binary.
serde_json = "1"

[dev-dependencies]
tempfile = "3"
