[package]
name = "tasks-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Qt 6 (cxx-qt) front-end for the Tasks.org native desktop client."

[[bin]]
name = "tasks-desktop"
path = "src/main.rs"

[dependencies]
tasks-core = { path = "../tasks-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }

[build-dependencies]
cxx-qt-build = { workspace = true }
