[package]
name = "tasks-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Qt 6 (cxx-qt) front-end for the Tasks.org native desktop client."

[[bin]]
name = "tasks-desktop"
path = "src/main.rs"

[dependencies]
tasks-core = { path = "../tasks-core" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
# Secret-wrapped password on `StoredAccount` so the ViewModel can't
# stringify / log the raw bytes, and the value zeroes on drop.
secrecy = { workspace = true }

# Windows-only: DwmSetWindowAttribute for forcing the immersive
# dark title bar regardless of whether `QT_QPA_PLATFORM=windows:
# darkmode=2` propagated correctly. Qt 6.6's QQuickWindow doesn't
# always pick the env var up on launch, so we apply it ourselves.
[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[build-dependencies]
cxx-qt-build = { workspace = true }
